golang/httpserver/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpserver
  name: httpserver
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: httpserver
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: env-httpserver-config
            optional: false
        image: syl527/httpserver
        imagePullPolicy: IfNotPresent
        name: httpserver
        ports:
        - containerPort: 80
          name: http
        lifecycle:
          postStart:
            exec:
              command: 
              - sh
              - -c
              - echo "start";
          preStop:
            exec:
              command: 
              - sh
              - -c
              - echo "stop";
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 2
          tcpSocket:
            port: 80
          timeoutSeconds: 2          
        resources:
          limits:
            cpu: "1"
            memory: 1048Mi
          requests:
            cpu: "1"
            memory: 1048Mi
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpserver
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpserver
  type: ClusterIP
