golang/httpserver/istio-https.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
spec:
  servers:
    - hosts:
        - httpsserver.hzk8s.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: httpscert
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver
spec:
  gateways:
    - httpsserver
  hosts:
    - httpsserver.hzk8s.com
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: httpserver.default.svc.cluster.local
            port:
              number: 80
